# arc62

./: .env.localnet.template  .env.testnet.template  .markdownlint.json  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.algokit/: .copier-answers.yml
.github/: dependabot.yml
.github/workflows/: asa-circulating-supply-cd.yaml  asa-circulating-supply-ci.yaml
helpers/: bonfire.py  ipfs.py
smart_contracts/: arc62_interface.py  avm_types.py  errors.py  template_vars.py
smart_contracts/artifacts/circulating_supply/: CirculatingSupply.approval.puya.map  CirculatingSupply.approval.teal  CirculatingSupply.arc32.json  CirculatingSupply.arc56.json  circulating_supply_client.py
smart_contracts/circulating_supply/: config.py  contract.py  deploy_config.py
tests/: conftest.py  test_arc62_get_circulating_supply.py  test_delete_config.py  test_deploy.py  test_get_circulating_supply.py  test_get_config.py  test_init_config.py  test_set_not_circulating_address.py
