[tool.poetry]
package-mode = false
name = "asa-circulating-supply"
version = "1.0.0"
description = "ASA Circulating Supply (ARC-62) reference implementation"
license = "GPL-3.0-only"
authors = ["cusma <cosimo.bassi@algorand.foundation>"]
maintainers = ["cusma <cosimo.bassi@gmail.com>"]
readme = "README.md"
documentation = "https://dev.algorand.co/arc-standards/arc-0062/"
repository = "https://github.com/algorandfoundation/arc62"
keywords = ["algorand", "blockchain", "tokenization"]

[tool.poetry.dependencies]
python = "^3.12"
algokit-utils = "^4.2.3"
python-dotenv = "^1.2.1"
algorand-python = "^3.3.0"
asa-metadata-registry = { git = "https://github.com/algorandfoundation/arc89.git", branch = "main" }

[tool.poetry.group.dev.dependencies]
algokit-client-generator = "^2.2.0"
black = {extras = ["d"], version = "^26.1.0"}
ruff = "^0.14.13"
mypy = "^1.19.1"
pytest = "^9.0.2"
pytest-cov = "^7.0.0"
pip-audit = "^2.10.0"
pre-commit = "^4.5.1"
puyapy = "^5.6.0"
urllib3 = "^2.6.3"
pip = "^26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
lint.select = ["E", "F", "ANN", "UP", "N", "C4", "B", "A", "YTT", "W", "FBT", "Q", "RUF", "I"]
lint.unfixable = ["B", "RUF"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
suppress-none-returning = true

[tool.pytest.ini_options]
pythonpath = ["smart_contracts", "tests"]

[tool.mypy]
files = "smart_contracts/"
python_version = "3.12"
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true
strict_concatenate = true
disallow_any_unimported = true
disallow_any_expr = true
disallow_any_decorated = true
disallow_any_explicit = true
